--- a/home.html
+++ b/home.html
@@ -10,14 +10,14 @@
 <body style="background-color: black;">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a style="margin-left: 30px;" class="navbar-brand" href="home.html">Каталог Дзу</a>
+    <a style="margin-left: 20px;" class="navbar-brand" href="home.html">Каталог Дзу</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="navbar-brand" aria-current="page" href="about.html">Сюжет</a>
+          <a style="margin-left: 20px;" class="navbar-brand" aria-current="page" href="about.html">Сюжет</a>
         </li>
       </ul>
     </div>
